--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "microservice-practice",
   "version": "1.0.0",
   "description": "learning microservices and backend tech including:",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "nodemon": "^3.1.3",
     "pg": "^8.12.0"
   }
 }
